--- a/templates/update.html
+++ b/templates/update.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Home{% endblock title %}
+{% block title %}Update Task{% endblock title %}
 {% block body %}
     <div class="container my-3">
         <h2>Update your tasks here:</h2>
