--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <script src="{{ url_for('static', filename='js/test.js') }}"></script>
-    <title> {% block title %} {% endblock title %} - MyTodo App</title>
+    <title> {% block title %} {% endblock title %} - MyTasks App</title>
 
   </head>
   <body>
