--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,17 @@
                 <a class="nav-link" href="#">About</a>
               </li>
             </ul>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              {% if session.get('logged_in') %}
+                  <li class="nav-item">
+                      <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                  </li>
+              {% else %}
+                  <li class="nav-item">
+                      <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                  </li>
+              {% endif %}
+            </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-dark" type="submit">Search</button>
