--- a/templates/index.html
+++ b/templates/index.html
@@ -17,20 +17,20 @@
         <form action="/add" method="POST">
             <div class="mb-3">
               <label for="title" class="form-label">Task Title</label>
-              <input type="text" class="form-control" name="title" id="title" aria-describedby="emailHelp">
+              <input type="text" class="form-control" name="title" id="title" aria-describedby="emailHelp" required>
             </div>
             <div class="mb-3">
               <label for="desc" class="form-label">Task Description</label>
-              <input type="text" class="form-control" name="desc" id="desc">
+              <input type="text" class="form-control" name="desc" id="desc" required>
             </div>
-            <div class="mb-3">
+            <!--<div class="mb-3">
               <label for="username" class="form-label">Username</label>
               <input type="text" class="form-control" name="username" id="username">
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Password</label>
               <input type="password" class="form-control" name="password" id="password">
-            </div>
+            </div>-->
             <button type="submit" class="btn btn-dark">Submit</button>
         </form>
     </div>
