--- a/templates/update.html
+++ b/templates/update.html
@@ -6,11 +6,11 @@
         <form action="/update/{{todo.sno}}" method="POST">
             <div class="mb-3">
               <label for="title" class="form-label">Task Title</label>
-              <input type="text" class="form-control" name="title" id="title" value="{{todo.title}}" aria-describedby="emailHelp">
+              <input type="text" class="form-control" name="title" id="title" value="{{todo.title}}" aria-describedby="emailHelp" required>
             </div>
             <div class="mb-3">
               <label for="desc" class="form-label">Task Description</label>
-              <input type="text" class="form-control" value="{{todo.desc}}" name="desc" id="desc">
+              <input type="text" class="form-control" value="{{todo.desc}}" name="desc" id="desc" required>
             </div>
           
             <button type="submit" class="btn btn-dark">Update</button>
