--- a/templates/my_goals.html
+++ b/templates/my_goals.html
@@ -10,7 +10,7 @@
         <div class="card-body">
           <h3 class="card-title">Set Your Goals</h3>
           <p class="card-text">Achieve your short and long term goals by breaking them into smaller habits/processes stacked one over the other.</p>
-          <a href="#" class="btn btn-primary">Get Started</a>
+          <a href="/" class="btn btn-primary">Get Started</a>
         </div>
       </div>
     </div>
