--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Welcome</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('about')}}">About</a>
+                <a class="nav-link" href="{{url_for('home')}}">Home</a>
               </li>
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
