--- a/templates/my_goals.html
+++ b/templates/my_goals.html
@@ -16,4 +16,61 @@
     </div>
   </div>
 </div>
+<div class="container my-3">
+  <h2>My Tasks</h2>
+  {% if allTodo|length==0 %}
+    <div class="alert alert-dark" role="alert">
+      No tasks found! Please add your tasks.
+    </div>
+  {% else %}
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">SNo</th>
+        <th scope="col">Title</th>
+        <th scope="col">Description</th>
+        <th scope="col">Time</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+    <tbody>            
+      {% for todo in allTodo %}
+      <tr>
+        <th scope="row">{{loop.index}}</th>
+        <td>{{todo.title}}</td>
+        <td>{{todo.desc}}</td>
+        <td>{{todo.date_created}}</td>
+        <td>
+          <a href="/update/{{todo.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</a>
+          <a href="/delete/{{todo.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</a>
+        </td>  
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% endif %}
+</div>
+
+<div class="container my-5">
+  <h1 class="display-4 fw-bold">Your Tasks</h1>
+  {% if allTodo %}
+      <ul class="list-group mt-4">
+          {% for task in allTodo %}
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                  <div>
+                      <h5 class="mb-1">{{ task.title }}</h5>
+                      <p class="mb-1 text-muted">{{ task.desc }}</p>
+                      <small>Created on {{ task.date_created.strftime('%Y-%m-%d %H:%M:%S') }}</small>
+                  </div>
+                  <div>
+                      <a href="/update/{{ task.sno }}" class="btn btn-primary btn-sm">Update</a>
+                      <a href="/delete/{{ task.sno }}" class="btn btn-danger btn-sm">Delete</a>
+                  </div>
+              </li>
+          {% endfor %}
+      </ul>
+  {% else %}
+      <p class="text-muted mt-4">No tasks found. Add a new task to get started!</p>
+  {% endif %}
+</div>
 {% endblock %}
