--- a/templates/my_goals.html
+++ b/templates/my_goals.html
@@ -16,7 +16,7 @@
     </div>
   </div>
 </div>
-<div class="container my-3">
+<!--<div class="container my-3">
   <h2>My Tasks</h2>
   {% if allTodo|length==0 %}
     <div class="alert alert-dark" role="alert">
@@ -49,7 +49,7 @@
     </tbody>
   </table>
   {% endif %}
-</div>
+</div>-->
 
 <div class="container my-5">
   <h1 class="display-4 fw-bold">Your Tasks</h1>
