--- a/templates/my_goals.html
+++ b/templates/my_goals.html
@@ -2,19 +2,7 @@
 {% block title %}My Goals{% endblock %}
 {% block body %}
 <div class="container text-center mt-5">
-  <h1>Welcome, {{ username }}!</h1>
-  <h2>Be a man with goals and purpose. Do 30 pushups now!</h2>
-  <div class="row mt-5">
-    <div class="col-md-6 mx-auto">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">Set Your Goals</h3>
-          <p class="card-text">Achieve your short and long term goals by breaking them into smaller habits/processes stacked one over the other.</p>
-          <a href="/" class="btn btn-primary">Get Started</a>
-        </div>
-      </div>
-    </div>
-  </div>
+  <h2 class="text-primary">Get your tasks done NOW, Don't Procrastinate!</h2>
 </div>
 <!--<div class="container my-3">
   <h2>My Tasks</h2>
