--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Welcome{% endblock title %}
 
 {% block body %}
-<!-- Goals Section -->
+<!-- Welcome Section -->
 <div class="container-fluid py-5 bg-light text-center">
   <div class="container">
     <h1 class="text-primary mb-4" style="font-size: 2.5rem;">Welcome, {{ username }}!</h1>
